Terraform/SG/main.tf
data "terraform_remote_state" "vps" {
  backend = "s3"
  config = {
    bucket = "mainacademy-project-terraform-back"
    key    = "dev/network/terraform.tfstate"
    region = "eu-central-1"
  }
}



resource "aws_security_group" "my_security_group" {
  name        = "${var.name}"
  description = "${var.description}"
  vpc_id      = data.terraform_remote_state.vps.outputs.vpc

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "my-security-group"
  }
}
